# emberdb

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
include/emberdb/common/: coordinate_normalization.h  football_event.h  football_event_column.h
include/emberdb/identity/: canonical_identity.h
include/emberdb/ingestion/: event_provider_adapter.h  metrica_event_adapter.h  provider_metadata.h  statsbomb_event_adapter.h  statsbomb_metadata_adapter.h  wyscout_event_adapter.h  wyscout_metadata_adapter.h
include/emberdb/query/: aggregation_query.h  event_query.h
include/emberdb/reconciliation/: match_reconciliation.h  match_review.h
include/emberdb/storage/: football_event_file.h  football_event_table.h
src/: main.cpp
src/common/: coordinate_normalization.cpp  football_event_column.cpp
src/identity/: canonical_identity.cpp
src/ingestion/: metadata_json.h  metrica_event_adapter.cpp  statsbomb_event_adapter.cpp  statsbomb_metadata_adapter.cpp  wyscout_event_adapter.cpp  wyscout_metadata_adapter.cpp
src/query/: aggregation_query.cpp  event_query.cpp
src/reconciliation/: match_reconciliation.cpp  match_review.cpp
src/storage/: football_event_file.cpp  football_event_table.cpp
tests/: aggregation_query_test.cpp  canonical_identity_test.cpp  coordinate_normalization_test.cpp  event_query_test.cpp  football_event_file_test.cpp  football_event_table_test.cpp  match_reconciliation_test.cpp  match_review_test.cpp  metrica_event_adapter_test.cpp  statsbomb_event_adapter_test.cpp  statsbomb_metadata_adapter_test.cpp  wyscout_event_adapter_test.cpp  wyscout_metadata_adapter_test.cpp
tests/fixtures/: complete_events.json  invalid.json  invalid_coordinates.json  metrica_events.csv  metrica_invalid_coordinates.csv  missing_optional_fields.json  statsbomb_lineups.json  statsbomb_matches.json  statsbomb_missing_match_metadata.json  statsbomb_reconciliation_matches.json  wyscout_competitions.json  wyscout_events.json  wyscout_invalid_coordinates.json  wyscout_invalid_metadata.json  wyscout_matches.json  wyscout_players.json  wyscout_teams.json
